Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72448

qtwebengine build failed due to missing xkbcommon_evdev

    XMLWordPrintable

Details

    • Linux/X11
    • 21112a89e3d742451d6b449fc7075d51266fe709 (qt/qtwebengine/5.12)

    Description

      https://codereview.qt-project.org/#/c/247212/ Update submodules on '5.12' in qt5 PS9

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1546416794

      https://testresults.qt.io/logs/qt/qtwebengine/b10f6f25bb4a53fb42503018fc85f3fbd67dff3b/LinuxUbuntu_18_04x86_64LinuxQEMUarmv7GCCqtci-linux-Ubuntu-18.04-x86_64-efb610Release/915a1db037b17d8da9ae52fd2bd374defc6847f2/build_1546421885/log.txt.gz

      agent:2018/12/09 23:55:14 build.go:193: In file included from /home/qt/work/install/include/QtCore/QtGlobal:1:0,
      agent:2018/12/09 23:55:14 build.go:193:                  from /home/qt/work/qt/qtwebengine/src/core/web_event_factory.h:50,
      agent:2018/12/09 23:55:14 build.go:193:                  from /home/qt/work/qt/qtwebengine/src/core/web_event_factory.cpp:67:
      agent:2018/12/09 23:55:14 build.go:193: /home/qt/work/install/include/QtCore/qglobal.h:86:30: error: division by zero in #if
      agent:2018/12/09 23:55:14 build.go:193:  #define QT_CONFIG(feature) (1/QT_FEATURE_##feature == 1)
      agent:2018/12/09 23:55:14 build.go:193:                               ^
      agent:2018/12/09 23:55:14 build.go:193: /home/qt/work/qt/qtwebengine/src/core/web_event_factory.cpp:104:28: note: in expansion of macro ‘QT_CONFIG’
      agent:2018/12/09 23:55:14 build.go:193:  #if QT_CONFIG(libinput) && QT_CONFIG(xkbcommon_evdev)
      agent:2018/12/09 23:55:14 build.go:193:                             ^~~~~~~~~
      

      Attachments

        For Gerrit Dashboard: QTBUG-72448
        # Subject Branch Project Status CR V

        Activity

          People

            paeglis Gatis Paeglis
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes