use new feature name xkbcommon_evdev -> xkbcommon

The xkbcommon configure logic was refactored in
qtbase/c3a963da1f9e7b1d37e63eedded61da4fbdaaf9a.
For more details see the relevant commit.

Fixes: QTBUG-72448
Change-Id: I04a5c7f7d0d64eb6a278560f439a585fba259cb4
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>